2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * fix name_of_function

        ast_graph
        * option -hide-types hides all type nodes

        CFG
        * option -ids adds node ids in dot

        Semantic
        * a few more orientation comments
        * print function info in the generated pvs

2007-12-04  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * fix byte-code compilation in various dirs
        * put a generic string_of_location in olmar/util/more_string

        Semantic:
        * change Makefile for byte-code compilation (for debugging)
        * pass locations down where necessary and print a source code
          related error message just before assert false (on some locations)

2007-11-26  Hendrik Tews  <tews@tandem.cs.ru.nl>

        CFG
        * added testcase for standard conversions

        Olmar
        * configure disables wiki_bot if ocamlfind is not found
        * add generation of expression_type to ast_accessors
        * new option -syntax for ast_graph to select only the real syntax
          nodes

2007-11-23  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * added olmar/BUILDING

        Olmar
        * more renaming fixes
        * everything fixed for the elsa variant restrictions: regression
          tests pass
        * backward translation in ast_config
        * gen_superast generates a superast match template

        wiki_bot
        * runs fine, the mozilla wiki is up-to-date

        cfg/modelcheck
        * adoptions

2007-11-21  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Olmar
        * fixed some renaming problems
        * elsa variant restriction: variants have at most two fields (+ annot)
        * added renamings for the elsa ast

2007-11-20  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * variant type restriction implemented: everything with more than
          2 fields becomes a record
        * bootstrap astgen_or

        * makefile fixes
